# doit-shelve-db

./: .gitignore  pyproject.toml  requirements.txt  setup.py
doit_shelve_db/: __init__.py  interfaces.py
tests/: __init__.py
